fixed blog styling on small screens

--- a/portfolio/src/components/blog/Blog.scss
+++ b/portfolio/src/components/blog/Blog.scss
@@ -8,3 +8,11 @@
     padding: 0;
   }
 }
+
+@media screen and (max-width: 700px) {
+  .blog {
+    .card {
+      margin: 10px 0;
+    }
+  }
+}
